added input range with placeholder

--- a/Suresh Interview Project/Project Kidney Disease/Deployment/templates/home.html
+++ b/Suresh Interview Project/Project Kidney Disease/Deployment/templates/home.html
@@ -19,23 +19,23 @@
                         <tr>
                             <td style="text-align:center">
                                 <label>Age</label>
-                                <input type="text" name="age">
-                            </td>
+                                <input type="text" name="age" placeholder="2 - 90">
+                            </td>   
                             <td style="text-align:center">
                                 <label>Blood_pressure</label>
-                                <input type="text" name="blood_pressure">
+                                <input type="text" name="blood_pressure" placeholder="50.0 - 180.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Specific_gravity</label>
-                                <input type="text" name="specific_gravity">
+                                <input type="text" name="specific_gravity" placeholder="1.005 - 1.025">
                             </td>
                             <td style="text-align:center">
                                 <label>Albumin</label>
-                                <input type="text" name="albumin">
+                                <input type="text" name="albumin" placeholder="0.0 - 5.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Sugar</label>
-                                <input type="text" name="sugar">
+                                <input type="text" name="sugar" placeholder="0 - 5">
                             </td>
                             <td style="text-align:center">
                                 <label>Red_blood_cells</label>
@@ -69,41 +69,41 @@
                             </td>
                             <td style="text-align:center">
                                 <label>Blood_glucose_random</label>
-                                <input type="text" name="blood_glucose_random">
+                                <input type="text" name="blood_glucose_random" placeholder="22.0 - 490.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Blood_urea</label>
-                                <input type="text" name="blood_urea">
+                                <input type="text" name="blood_urea" placeholder="1.5 - 391.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Serum_creatinine</label>
-                                <input type="text" name="serum_creatinine">
+                                <input type="text" name="serum_creatinine" placeholder="0.4 - 76.0">
                             </td>
                         </tr>
                         <tr>
                             <td style="text-align:center">
                                 <label>Sodium</label>
-                                <input type="text" name="sodium">
+                                <input type="text" name="sodium" placeholder="4.5 - 163.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Potassium</label>
-                                <input type="text" name="potassium">
+                                <input type="text" name="potassium" placeholder="2.5 - 47.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Haemoglobin</label>
-                                <input type="text" name="haemoglobin">
+                                <input type="text" name="haemoglobin" placeholder="3.1 - 17.8">
                             </td>
                             <td style="text-align:center">
                                 <label>Packed_cell_volume</label>
-                                <input type="text" name="packed_cell_volume">
+                                <input type="text" name="packed_cell_volume" placeholder="9.0 - 54.0">
                             </td>
                             <td style="text-align:center">
                                 <label>White_blood_cell_count</label>
-                                <input type="text" name="white_blood_cell_count">
+                                <input type="text" name="white_blood_cell_count" placeholder="2200.0 - 26400.0">
                             </td>
                             <td style="text-align:center">
                                 <label>Red_blood_cell_count</label>
-                                <input type="text" name="red_blood_cell_count">
+                                <input type="text" name="red_blood_cell_count" placeholder="2.1 - 8.0">
                             </td>
                         </tr>
                         <tr>
