--- a/Suresh Interview Project/Project Interview/Part 2/templates/home.html
+++ b/Suresh Interview Project/Project Interview/Part 2/templates/home.html
@@ -32,17 +32,16 @@
             </div>
         </div>
         
-        <!-- <div class="col">
+        <div class="col">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/videointerview.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Project Resume Similarity</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="/videointerview" class="btn btn-primary">Visit me</a>
+                    <h5 class="card-title">Resume Similarity</h5>
+                    <p class="card-text">Use an Applicant Tracking System and organize job applications. Make an ATS-Friendly Resume.</p>
+                    <a href="/resumesimilaritysystem" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         
 
