--- a/Suresh Interview Project/Project Interview/Part 2/templates/rss.html
+++ b/Suresh Interview Project/Project Interview/Part 2/templates/rss.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <form action="/jobtitle" method="post" enctype="multipart/form-data">
+                <form action="/resumesimilaritysystem" method="post" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Upload your resume in (.pdf) formate :</label>
                         <input type="file" name="file" class="file">
