18122022 added pie charts using JS and plotly

--- a/Suresh Interview Project/Project Interview/Part 2/templates/rss_result.html
+++ b/Suresh Interview Project/Project Interview/Part 2/templates/rss_result.html
@@ -13,7 +13,8 @@
 <img src="{{ url_for('static', filename = img_path1[7:]) }}" alt="">
 <hr><hr>
 <img src="{{ url_for('static', filename = img_path2[7:]) }}" alt="">
-
+<br>
+<div id="pie" d3pie="0.2.1" style="margin: auto; text-align: center;"></div>
 
 {% endif %}
 {% endblock %}
