--- a/Suresh Interview Project/Project Interview/Part 2/templates/base.html
+++ b/Suresh Interview Project/Project Interview/Part 2/templates/base.html
@@ -111,6 +111,14 @@
 
 	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+	<script>
+		var data = {{ graph_values|safe }};
+		layout = {{ layout|safe }};
+		Plotly.newPlot('pie', data, layout);
+	  </script>
 
 
 
