--- a/Suresh Interview Project/Project Drone OCR/Deploy/templates/index.html
+++ b/Suresh Interview Project/Project Drone OCR/Deploy/templates/index.html
@@ -14,21 +14,47 @@
 </center>
 
 {% if flag %}
+{% if warning_flag %}
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+        <path
+            d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+    </symbol>
+</svg>
 
-    number_plate : {{ number_plate }}
-    <br>
+<div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+        <use xlink:href="#exclamation-triangle-fill" />
+    </svg>
+    <div>
+        <h3>Number plate not detected. Please try again !!!</h3>
+    </div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 
-    img_file_path : {{ img_file_path }}
-    <br>
+{% else %}
 
-    cropped_image_file_path : {{ cropped_image_file_path }}
-    <br>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>Your Image</h3><hr>
+            <img src="{{ img_file_path }}" class="rounded mx-auto d-block" style="height:300px; width:300px;" alt="img_file_path">
+        </div>
+        <div class="col">
+            <h3>Detected Number Plate</h3><hr>
+            <img src="{{ cropped_image_file_path }}" class="rounded mx-auto d-block" style="height:300px; width:300px;" alt="cropped_image_file_path">
+        </div>
+        <div class="col">
+            <h4>Number Plate <strong>-> {{ number_plate }}</strong></h4> <hr>
+            <h4>Owner Name <strong>-> {{ owner_name }}</strong></h4> <hr>
+            <h4>Address <strong>-> {{ address }}</strong></h4> <hr>
+            <h4>Phone Number <strong>-> {{ phone_number }}</strong></h4> <hr>
+            <h4>Email ID <strong>-> {{ email_id }}</strong></h4> <hr>
+        </div>
+    </div>
+</div>
 
-    <img src="{{ img_file_path }}" class="rounded mx-auto d-block" style="height:400px; width:400px;" alt="img_file_path">
-    <br>
-
-    <img src="{{ cropped_image_file_path }}" class="rounded mx-auto d-block" style="height:400px; width:400px;" alt="cropped_image_file_path">
-    <br>
+{% endif %}
 
 {% endif %}
 
