--- a/Suresh Interview Project/Project Interview/Part 1/templates/home.html
+++ b/Suresh Interview Project/Project Interview/Part 1/templates/home.html
@@ -39,7 +39,7 @@
                     <h5 class="card-title">Project Resume Similarity</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="/videointerview" class="btn btn-primary">Visit me</a>
+                    <a href="/resumesimilaritysystem" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
         </div>
