--- a/Suresh Interview Project/Project Interview/Part 3/Deploy/templates/jobtitle.html
+++ b/Suresh Interview Project/Project Interview/Part 3/Deploy/templates/jobtitle.html
@@ -34,6 +34,35 @@
                 
             </div>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-6">
+                <h2>Role Score</h2>
+                <br>
+                <div id="chart1_40" class="chart"></div>
+            </div>
+            <div class="col-6">
+                <h2>Job Title</h2>
+                <br>
+                Your resume is match for <strong style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">" {{ rds_40 }} "</strong> position with <strong style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">{{ max_li_40 }}%</strong> score. 
+                
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-6">
+                <h2>Role Score</h2>
+                <br>
+                <div id="chart1_60" class="chart"></div>
+            </div>
+            <div class="col-6">
+                <h2>Job Title</h2>
+                <br>
+                Your resume is match for <strong style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">" {{ rds_60 }} "</strong> position with <strong style="text-decoration-line: underline; text-decoration-style: wavy; text-decoration-color: red;">{{ max_li_60 }}%</strong> score. 
+                
+            </div>
+        </div>
+        <hr>
     </div>
 
     {% endif %}
