Text Summarization Hindi
Text Summarization Hindi

--- a/Suresh Interview Project/Text Summarization using Deep Learning/Deploy_Hindi/templates/index.html
+++ b/Suresh Interview Project/Text Summarization using Deep Learning/Deploy_Hindi/templates/index.html
@@ -58,7 +58,9 @@
                             <img src="{{ url_for('static', filename = result3[2][7:]) }}" class="img-fluid" width="600" height="400" alt="Result3">
                         </div>
                         <div class="col">
-                            ...
+                            <h2>Method : {{result4[0]}} </h2>
+                            <p>{{result4[1]}}</p>
+                            <img src="{{ url_for('static', filename = result4[2][7:]) }}" class="img-fluid" width="600" height="400" alt="Result3">
                         </div>
                     </div>
                 </div>
