--- a/Neha Project/part3/deploy/templates/home.html
+++ b/Neha Project/part3/deploy/templates/home.html
@@ -9,7 +9,7 @@
 <center>
 <div class="container d-flex justify-content-center align-items-center">
     <div class="row">
-        <div class="col">
+        <!-- <div class="col">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/qanda.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
@@ -18,12 +18,12 @@
                     <a href="/qanda" class="btn btn-primary">Visit me</a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='style/img/videointerview.jpg' ) }}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Emotion Based Personality Test</h5>
+                    <h5 class="card-title">Facial Emotion Based Personality Prediction</h5>
                     <p class="card-text">Some words used to describe aspects of personality are often applied to the same person.</p>
                     <a href="/emotion" class="btn btn-primary">Visit me</a>
                 </div>
