--- a/Neha Project/part3/deploy/templates/base.html
+++ b/Neha Project/part3/deploy/templates/base.html
@@ -21,7 +21,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="/">
-				<h3>LOGO</h3>
+				<h3>Facial Emotion Based Personality Prediction</h3>
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
