Hindi Text Summarization
Hindi Text Summarization

--- a/Suresh Interview Project/Text Summarization using Deep Learning/Text Summarization in English using Deep Learning/Deploy/templates/index.html
+++ b/Suresh Interview Project/Text Summarization using Deep Learning/Text Summarization in English using Deep Learning/Deploy/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Summarizer</title>
+    <title>English Text Summarizer</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css' ) }}">
 </head>
@@ -17,7 +17,7 @@
             </ul>
         </nav> -->
         <div class="hero">
-            <h1>Text Summarizer</h1>
+            <h1>English Text Summarizer</h1>
             <p>Summarize your text with ease</p>
         </div>
     </header>
