--- a/Neha Project/QR code based attendance system/deploy1/templates/scan_id.html
+++ b/Neha Project/QR code based attendance system/deploy1/templates/scan_id.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="30">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
